Fix CSS spacing for content box block elements.

--- a/css/block/view.css
+++ b/css/block/view.css
@@ -1,3 +1,12 @@
 .ccm-block-tgs-content-box.default {
   position: relative;
 }
+.ccm-block-tgs-content-box.default.image-left .tgs-content-box-text > :first-child, .ccm-block-tgs-content-box.default.image-right .tgs-content-box-text > :first-child {
+  margin-top: 0;
+}
+.ccm-block-tgs-content-box.default .tgs-content-box-media {
+  margin-bottom: 1rem;
+}
+.ccm-block-tgs-content-box.default figcaption {
+  margin-top: 0.5rem;
+}
